--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   },
   "dependencies": {
     "@babel/runtime": "7.7.6",
+    "config-point": "^0.3.4",
     "core-js": "^3.2.1",
     "cornerstone-core": "2.6.0",
     "wslink": "^0.1.8"
@@ -107,17 +108,17 @@
     "prettier": "^1.18.2",
     "react-hot-loader": "^4.13.0",
     "serve": "^11.1.0",
+    "shader-loader": "^1.3.1",
     "start-server-and-test": "^1.10.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^5.1.4",
     "unused-webpack-plugin": "2.4.0",
+    "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^5.7.3",
     "workbox-webpack-plugin": "^6.1.5",
-    "shader-loader": "^1.3.1",
-    "webpack": "^5.50.0",
     "worker-loader": "^3.0.8"
   },
   "husky": {
